--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <!--Favicon-->
 
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="icons/apple-touch-icon-114x114.png" />
-
 <link rel="icon" type="image/png" sizes="128x128"  href="icons/favicon-128.png" />
 <meta name="msapplication-TileColor" content="#FFFFFF" />
 <meta name="msapplication-square150x150logo" content="icons/mstile-150x150.png" />
@@ -140,10 +139,10 @@
 	 	<p><small>-First Responsive Site</small></p>
 	 	<hr class="hr-center">
 			<div class="pic">
-			<a href="#" target="_blank"><img src="images/portfolio1.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			<a href="https://aj17kr.github.io/codify/" target="_blank"><img src="images/portfolio1.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
 			</div>
-			<p style="padding-top: 40px">This is my first attempt/first site which I've made after learning Bootstrap Framewoek.</p>
-			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
+			<p style="padding-top: 40px">This is my first attempt/first site which I've made after learning Bootstrap Framework.</p>
+			<p><strong>Technologies used: </strong>HTML,CSS,BootStrap</p>
 		</div>
 
 	<!--Project 2-->
@@ -152,9 +151,9 @@
 	 	<p><small>-A FreeCodeCamp Project</small></p>
 	 	<hr class="hr-center">
 			<div class="pic">
-			<a href="#" target="_blank"><img src="images/portfolio2.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560px; height=350px;></a>
+			<a href="https://aj17kr.github.io/Portfolio-Project/" target="_blank"><img src="images/portfolio2.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560px; height=350px;></a>
 			</div>
-			<p style="padding-top: 40px">A Portflio site project a part of FreeCodeCamp Curriculum.</p>
+			<p style="padding-top: 40px">A Portfolio site project a part of FreeCodeCamp Curriculum.</p>
 			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
 		</div>		
 	</div>
@@ -166,7 +165,7 @@
 	 	<p><small>-A W3schools Project</small></p>
 	 	<hr class="hr-center">
 			<div class="pic">
-			<a href="#" target="_blank"><img src="images/portfolio3.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			<a href="https://aj17kr.github.io/Band-Project/" target="_blank"><img src="images/portfolio3.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
 			</div>
 			<p style="padding-top: 40px">Simple Music band site .</p>
 			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
@@ -178,7 +177,7 @@
 	 	<p><small>-A W3schools Project</small></p>
 	 	<hr class="hr-center">
 			<div class="pic">
-			<a href="#" target="_blank"><img src="images/portfolio4.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			<a href="https://aj17kr.github.io/DigitalAgency-Project/" target="_blank"><img src="images/portfolio4.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
 			</div>
 			<p style="padding-top: 40px">A basic simple Digital Agency site.</p>
 			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
