Some textual modfication

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	
 	<!--Project 4-->
 		<div class="col-sm-6 portfolio-col-two">
-		<h4> Company</h4>
+		<h4> Digital Agency</h4>
 	 	<p><small>-A W3schools Project</small></p>
 	 	<hr class="hr-center">
 			<div class="pic">
