--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 	<link rel="stylesheet" href="bootstrap-3.3.7-dist/css/custom.css">
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129374041-3"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-129374041-3');
+	</script>
 </head>
 
 <body id="#myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
