updated with new projects

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 	<div class="row about-row-spacing"> <!-- .about-row-spacing provies left & right padding-->
 		<div class="col-sm-12 col-lg-5 about-col-spacing"> <!-- .about-col-spacing provides top padding-->
 			<h4>Introduction</h4>
-			<p>This is Akhil Jain. A computer science graduate and self-taught Aspiring Front-End Developer. I write clean, smart and efficient code. I prefer and love modern clean and minimal design.</p>
-			<p>I've taught myself the Web Technologies from various online sources. Even though I'm begineer, I still have basic knowledge and skills to get the shit done and currently in the process of learning more. Being a Geek , I'm always up to date with current tech news. Other than development I've great interest in SmartPhones and Gizmos.</p>
+			<p>This is Akhil Jain. A computer science engineering graduate and self-taught Aspiring Front-End Developer. I write clean, smart and efficient code. I prefer and love modern clean and minimal design.</p>
+			<p>I've taught myself the Web technologies from various online sources. Even though I'm at between begineer to intermediate level, I still have basic knowledge and skills to get the shit done and currently in the process of learning more. Being a Geek , I'm always up to date with current tech news. Other than development I've great interest in Smartphones and gizmos.</p>
 		</div>
 
 		<div class="col-sm-6 col-lg-3 about-col-spacing"> <!-- .about-col-spacing provides top padding-->
@@ -93,7 +93,8 @@
 				<li>JavaScript</li>
 				<li>JQuery</li>
 				<li>Twitter Bootstrap</li>
-				<li>Sublime Text</li>
+				<li>Skeleton</li>
+				<li>Sublime Text/VsCode/Atom</li>
 				<li>GitHub</li>
 			</ul>
 		</div>
@@ -104,28 +105,13 @@
 				<li>EDM Music</li>
 				<li>Movies & TV Series</li>
 				<li>Custom Android ROM's</li>
-				<li>Exploring different OS's.</li>
+				<li>Exploring different OS's</li>
 				<li>Online Shopping</li>
 				<li>High Speed Internet Lover</li>
-				<li>Pizza</li>
+				<li>Pizza Lover</li>
 			</ul>
 		</div>
 	</div>
-
-	<!--Education info , to be displayed in new design in future-->
-	<!--
-	<div class="row">
-	  <div class="col-sm-6 about-col-spacing">
-	  	<h4>Education</h4>
-	  	<ul>
-	  	<li><strong>2011-2015-</strong> B.Tech in C.S.E.</li>
-	  	<li><strong>2010-</strong> 12th ,C.B.S.E. Board</li>
-	  	<li><strong>2009-</strong> 10th, C.B.S.E. Board</li>
-		</ul>
-	  </div>
-	</div>
-	--> 
-	<!--/Education info-->
 	
 	</div>	
 </section>
@@ -138,91 +124,154 @@
   <div class="container">
 	<h3 class="text-center">PROJECTS</h3>
 	<hr class="hr-center">
-	<p class="text-center">As I'm still in learning phase, My projects are limited at time. But to practice my skills , I'm developing already made templates/sites to improve my skills. Here are some of the projects which I've made till now.</p>
+	<p>As I'm still in learning phase, My projects are limited at time. Here are some of the projects which I've made till now. It Consists of both real world projects and hobby projects.</p>
 	
 	<!--project screenshot and description-->
+ 	<!--.portfolio.col-two class adds top-margin and left padding-->
+	<!--.portfolio.col-one class adds top-margin and right padding-->
 	<div class="row  text-center">
-
-	<!--Project 1-->	
-		<div class="col-sm-6 portfolio-col-one"> <!--.portfolio.col-one class adds top-margin and right padding-->
-		<h4> Codify</h4>
-	 	<p><small>-First Responsive Site</small></p>
-	 	<hr class="hr-center">
-			<div class="pic">
-			<a href="https://aj17kr.github.io/codify/" target="_blank"><img src="images/portfolio1.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+	 <!--Project Raj Construction-->
+		<div class="col-sm-6 portfolio-col-one"> 
+			<div class="portfolio-pic">
+			<a href="https://www.rajdecor.in/" target="_blank"><img src="images/portfolio/rajConstruction.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
 			</div>
-			<p style="padding-top: 40px">This is my first attempt/first site which I've made after learning Bootstrap Framework.</p>
-			<p><strong>Technologies used: </strong>HTML,CSS,BootStrap</p>
+			<div class="portfolio-desc">
+			<h4>Raj Construction</h4>
+			<hr class="hr-center">
+			<p>This is real world site made for gurugram based interior ,construction and collaboration firm Raj Construction.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-default">JQuery</span> <span class="label label-warning">Bootstrap</span></p>
+			</div>
 		</div>
 
-	<!--Project 2-->
-		<div class="col-sm-6 portfolio-col-two">  <!--.portfolio.col-two class adds top-margin and left padding-->
-		<h4> Portfolio Site</h4>
-	 	<p><small>-A FreeCodeCamp Project</small></p>
-	 	<hr class="hr-center">
-			<div class="pic">
-			<a href="https://aj17kr.github.io/Portfolio-Project/" target="_blank"><img src="images/portfolio2.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560px; height=350px;></a>
+	<!--Project Galaxy Fit-->
+		<div class="col-sm-6 portfolio-col-two"> 
+			<div class="portfolio-pic">
+			<a href="https://www.mygalaxyfitness.online" target="_blank"><img src="images/portfolio/galaxyFitness.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
 			</div>
-			<p style="padding-top: 40px">A Portfolio site project a part of FreeCodeCamp Curriculum.</p>
-			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
-		</div>		
+			<div class="portfolio-desc">
+			<h4>Galaxy Fitness</h4>
+			<hr class="hr-center">
+			<p>This is real world site made for gurugram based fitness gym called Galaxy Fitness.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-default">JQuery</span> <span class="label label-warning">Bootstrap</span></p>
+			</div>
+		</div>
+
 	</div>
 
 	<div class="row  text-center">
-	 <!--Project 3-->
-		<div class="col-sm-6 portfolio-col-one">
-		<h4> Music Band</h4>
-	 	<p><small>-A W3schools Project</small></p>
-	 	<hr class="hr-center">
-			<div class="pic">
-			<a href="https://aj17kr.github.io/Band-Project/" target="_blank"><img src="images/portfolio3.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+	 <!--Project Random Quote Machine-->
+		<div class="col-sm-6 portfolio-col-one"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/randomQuoteMachine/" target="_blank"><img src="images/portfolio/randomQuoteMachine.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
 			</div>
-			<p style="padding-top: 40px">Simple Music band site .</p>
-			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
+			<div class="portfolio-desc">
+			<h4>Random Quote Machine</h4>
+			<hr class="hr-center">
+			<p>A 3rd party API based random Quote Machine project which will displays some random quotes.This project has been made using ES8's feature Async-Await.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-warning">Skeleton</span> <span class="label label-danger">ES8</span></p>
+			</div>
+		</div>
+
+	<!--Project Weather App-->
+		<div class="col-sm-6 portfolio-col-two"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/weatherJsApp/" target="_blank"><img src="images/portfolio/weatherJs.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			</div>
+			<div class="portfolio-desc">
+			<h4>Weather App</h4>
+			<hr class="hr-center">
+			<p>This web app will tell weather on the basis of geolocation and by manually entered location using Weather Underground weather API. ES8's feature Async-Await is used in this project.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-warning">Bootstrap</span> <span class="label label-danger">ES8</span> <span class="label label-default">JQuery</span></p>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row  text-center">
+	 <!--Project GitHub Finder-->
+		<div class="col-sm-6 portfolio-col-one"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/githubFinder/" target="_blank"><img src="images/portfolio/githubFinder.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			</div>
+			<div class="portfolio-desc">
+			<h4>GitHub Finder</h4>
+			<hr class="hr-center">
+			<p>A Github finder project made using GitHub API which shows some details about Github users by entering their username. ES8's feature Async-Await is used in this project.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-warning">Bootstrap</span> <span class="label label-danger">ES8</span></p>
+			</div>
+		</div>
+
+	<!--Project Todo App-->
+		<div class="col-sm-6 portfolio-col-two"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/todoAppJquery/" target="_blank"><img src="images/portfolio/todoApp.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			</div>
+			<div class="portfolio-desc">
+			<h4>Todo App</h4>
+			<hr class="hr-center">
+			<p>It's simply Todo App made using Jquery and Local Storage to save notes locally.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-default">JQuery</span></p>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="row  text-center">
+	<!--Project Codify-->	
+		<div class="col-sm-6 portfolio-col-one"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/codify/" target="_blank"><img src="images/portfolio/portfolio1.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			</div>
+			<div class="portfolio-desc">
+			<h4>Codify</h4>
+			<hr class="hr-center">
+			<p>This is my first attempt/first site which I've made after learning Bootstrap Framework.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-warning">BootStrap</span></p>
+			</div>
+		</div>
+
+	<!--Project FCC Portfolio Site-->	
+		<div class="col-sm-6 portfolio-col-two"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/Portfolio-Project/" target="_blank"><img src="images/portfolio/portfolio2.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			</div>
+			<div class="portfolio-desc">
+			<h4>Portfolio Site</h4>
+			<hr class="hr-center">
+			<p>A Portfolio site project a part of FreeCodeCamp Curriculum.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-default">JQuery</span> <span class="label label-warning">Bootstrap</span></p>
+			</div>
+		</div>
+	</div>
+
+	<div class="row  text-center">
+	<!--Project Simple Music band site-->
+		<div class="col-sm-6 portfolio-col-one"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/Band-Project/" target="_blank"><img src="images/portfolio/portfolio3.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+			</div>
+			<div class="portfolio-desc">
+			<h4>Music Band</h4>
+			<hr class="hr-center">
+			<p>Simple Music band site .</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-default">JQuery</span> <span class="label label-warning">Bootstrap</span></p>
+			</div>
 		</div>
 	
-	<!--Project 4-->
-		<div class="col-sm-6 portfolio-col-two">
-		<h4> Digital Agency</h4>
-	 	<p><small>-A W3schools Project</small></p>
-	 	<hr class="hr-center">
-			<div class="pic">
-			<a href="https://aj17kr.github.io/DigitalAgency-Project/" target="_blank"><img src="images/portfolio4.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
+	<!--Project Digital Agency-->
+		<div class="col-sm-6 portfolio-col-two"> 
+			<div class="portfolio-pic">
+			<a href="https://aj17kr.github.io/DigitalAgency-Project/" target="_blank"><img src="images/portfolio/portfolio4.jpg" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px;></a>
 			</div>
-			<p style="padding-top: 40px">A basic simple Digital Agency site.</p>
-			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
+			<div class="portfolio-desc">
+			<h4>Digital Agency</h4>
+			<hr class="hr-center">
+			<p>A basic simple Digital Agency site.</p>
+			<p><strong>Technologies used: </strong><span class="label label-primary">HTML</span> <span class="label label-success">CSS</span> <span class="label label-default">JQuery</span> <span class="label label-warning">Bootstrap</span></p>
+			</div>
 		</div>		
 	</div>
 
-<!-- FUTURE PROJECTS
-
-	<div class="row  text-center">
-	 
-		<div class="col-sm-6 portfolio-col-one">
-		<h4> Title</h4>
-	 	<p><small>-A _____ Project</small></p>
-	 	<hr class="hr-center">
-			<div class="pic">
-			<a href="#" target="_blank"><img src="images/portfolio2.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px; ></a>
-			</div>
-			<p style="padding-top: 40px">Description</p>
-			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
-		</div>
-
-		<div class="col-sm-6 portfolio-col-one">
-		<h4> Title</h4>
-	 	<p><small>-A _____ Project</small></p>
-	 	<hr class="hr-center">
-			<div class="pic">
-			<a href="#" target="_blank"><img src="images/portfolio2.png" alt="project-image" class="img-responsive" style="display:inline-block;" width=560; height=350px; ></a>
-			</div>
-			<p style="padding-top: 40px">Description</p>
-			<p><strong>Technologies used: </strong>HTML,CSS,JQuery,BootStrap</p>
-		</div>
-	</div>
-
-
--->
   </div>
 </section>
 <!--/project section-->
@@ -240,7 +289,7 @@
 	<a href="http://www.github.com/aj17kr"><i class="fa fa-github fa-5x"></i></a>
 	</div>
 	</div>
-	<p class="text-center" style="margin-top: 100px;">© Copyright 2017 Akhil Jain personal portfolio</p>
+	<p class="text-center" style="margin-top: 100px;">© Copyright <script>document.write(new Date().getFullYear());</script> Akhil Jain personal portfolio</p>
 </section>
 
 <!--/Contact section-->
